--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -11,47 +11,46 @@
         <div class="carousel-inner" style="text-shadow: 4px 4px #000;">
 
 
-        <div class="item active" style="background-image: url('@Url.Content("~/Content/images/slider/slide1.jpg")')">
+        <div class="item responsive-image active" style="background-image: url('@Url.Content("~/Content/images/slider/slide1.jpg")'); background-size: contain;">
             <div class="carousel-caption" style="text-shadow: 2px 2px #000;">
                 <div>
-                    <h2 class="heading animated bounceInDown" style="text-shadow: 3px 3px #000;">WISH of Rockaway</h2>
-                    @*<p class="animated bounceInUp" style="text-shadow: 2px 2px #000;">Women Inspired to Help and Suport</p>*@
+                    <h2 class="heading animated bounceInDown">WISH of Rockaway</h2>
                     <br />
-                    <a class="btn btn-default slider-btn animated fadeIn" style="text-shadow: 2px 2px #000;" href="@Url.Content("~/about-wish")">Learn More</a>
+                    <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/about-wish")">Learn More</a>
                 </div>
             </div>
         </div>
-            <div class="item" style="background-image: url('@Url.Content("~/Content/images/slider/slide2.jpg")')">
+            <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide2.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInDown" style="text-shadow: 3px 3px #000">Women</h2><br />
-                        <p class="animated bounceInUp" style="text-shadow: 2px 2px #000;">Would you like to run the 2016 NYC marathon?</p>
-                        <p class="animated bounceInDown" style="text-shadow: 2px 2px #000;">Come on ladies!</p>
+                        <h2 class="heading animated bounceInDown">Women</h2><br />
+                        <p class="animated bounceInUp">Would you like to run the 2016 NYC marathon?</p>
+                        <p class="animated bounceInDown">Come on ladies!</p>
                         <a class="btn btn-default slider-btn animated fadeIn" style="text-shadow: 2px 2px #000;" href="@Url.Content("~/contact-wish")">Contact Us</a>
                     </div>
                 </div>
 
             </div>
-            <div class="item" style="background-image: url('@Url.Content("~/Content/images/slider/slide3.jpg")')">
+            <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide3.jpg")')">
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInRight" style="text-shadow: 3px 3px #000;">Inspired</h2>
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url('@Url.Content("~/Content/images/slider/slide4.jpg")')">
+            <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide4.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight" style="text-shadow: 3px 3px #000;">Support</h2><br />
-                        <p class="animated bounceInUp" style="text-shadow: 2px 2px #000;">Would you like to donate?</p>
-                        <a class="btn btn-default slider-btn animated bounceInUp" style="text-shadow: 2px 2px #000;" href="#">Donate</a>
+                        <h2 class="heading animated bounceInRight">Support</h2><br />
+                        <p class="animated bounceInUp">Would you like to donate?</p>
+                        <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/donate")">Donate</a>
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url('@Url.Content("~/Content/images/slider/slide5.jpg")')">
+            <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide5.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight" style="text-shadow: 3px 3px #000;">Help</h2>
+                        <h2 class="heading animated bounceInRight">Help</h2>
                     </div>
                 </div>
             </div>
