--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <link href="@Url.Content("~/Content/css/animate.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/css/site.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/css/responsive.css")" rel="stylesheet">
-    <!--[if lt IE 9]> <script src="js/html5shiv.js"></script>
+    <link href="@Url.Content("~/Content/css/responsive-carousel.css")" rel="stylesheet">
+   <!--[if lt IE 9]> <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script> <![endif]-->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="@Url.Content("~/Content/images/ico/apple-touch-icon-144-precomposed.png")">
@@ -44,7 +45,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="@Url.Content("~/")"><h1><img src="@Url.Content("~/Content/images/logo.png")" alt="logo" ></h1></a>
+                    <a class="navbar-brand" href="@Url.Content("~/")"><h1><img src="@Url.Content("~/Content/images/logo2.png")" alt="logo" ></h1></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
