--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -26,7 +26,7 @@
                         <h2 class="heading animated bounceInDown">Women</h2><br />
                         <p class="animated bounceInUp">Would you like to run the 2016 NYC marathon?</p>
                         <p class="animated bounceInDown">Come on ladies!</p>
-                        <a class="btn btn-default slider-btn animated fadeIn" style="text-shadow: 2px 2px #000;" href="@Url.Content("~/contact-wish")">Contact Us</a>
+                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/contact-wish")">Contact Us</a>
                     </div>
                 </div>
 
@@ -34,7 +34,7 @@
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide3.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight" style="text-shadow: 3px 3px #000;">Inspired</h2>
+                        <h2 class="heading animated bounceInRight">Inspired</h2>
                     </div>
                 </div>
             </div>
