--- a/source/RockawayWish.Web/Content/css/site.css
+++ b/source/RockawayWish.Web/Content/css/site.css
@@ -37,14 +37,15 @@
 /*====================
 ======Typography=====
 ======================*/
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
+@import url(//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
+@import url(//fonts.googleapis.com/css?family=Fanwood+Text);
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Fanwood Text', sans-serif;
 	position: relative;
 	font-weight:400;
 	background: #fff;
-	color:#43484E
+	color:#43484E;
 }
 
 body  section{
@@ -70,16 +71,20 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto', sans-serif;
+	/*font-family: 'Roboto', sans-serif;*/
+    font-weight: bold
 }
 
+p { font-size: 16px; }
+
 .slider-btn {
+
 	background-color:#FFA1D5;
-	color: #FFF;
+	color: #000;
 	-webkit-box-shadow: inset 0 0 0 2px #fc7700;
 	box-shadow: inset 0 0 0 2px #000;
 	text-transform: uppercase;
-	width: 190px;
+	/*width: 190px;*/
 	text-align: center;
 	height: 55px;
 	line-height:55px;
@@ -244,8 +249,8 @@ h1, h2, h3, h4, h5, h6 {
 ======================*/
 
 #navigation .navbar {
-  /*background:rgba(255, 255, 255, 0.952941);*/
-  background:#FFA1D5;
+  background:rgba(255, 255, 255, 0.952941);
+  /*background:#FFA1D5;*/
   border-radius: 0;
   border-bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.298039) 10px 0px 10px;
@@ -254,7 +259,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #navigation .navbar-toggle{
   margin-top: 20px;
-  background-color: #333;
+  background-color: #FFA1D5;
 }
 
 #navigation .navbar-brand h1{
@@ -264,6 +269,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #navigation .navbar-nav.navbar-right li {
 	padding: 0 1px;
+    margin-left: 20px;
 }
 
 #navigation .navbar-nav.navbar-right {
@@ -272,22 +278,32 @@ h1, h2, h3, h4, h5, h6 {
 
 #navigation .navbar-nav.navbar-right li a {
 	color: #000;
-	font-family: 'Roboto',sans-serif;
-	font-size: 14px;
+    font-family: 'Fanwood Text', sans-serif;
+	font-size: 18px;
 	padding: 0;
 	text-transform: uppercase;
 	-webkit-transition: all .9s ease 0s;
 	-moz-transition: all .9s ease 0s;
 	-o-transition: all .9s ease 0s;
 	transition: all .9s ease 0s;
-	padding: 6px 15px;
+	padding: 6px 20px;
+}
+#navigation .navbar-nav.navbar-right li a:before {
+	color: #FE99CC;
+	content: "";
+    width: 25px;
+    height: 25px;
+	left: -10px;
+	position: absolute;
+	top: 0;
+    background-image: url('/Content/images/pink-star.png')
 }
 
 #navigation .navbar-inverse .navbar-nav  .active  a,  
 #navigation .navbar-inverse .navbar-nav  .active  a:focus, 
 #navigation .navbar-nav.navbar-right li a:hover {
 	color: #FF2A7F;
-	background-color: #fff;
+	/*background-color: #fff;*/
 }
 
 
@@ -310,6 +326,16 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   overflow: hidden;
   position:relative
+}
+#main-carousel .slider-btn {
+    /*background-color: #FFA1D5;*/
+    background-color: #fff;
+    color: #000;
+    background-image: none;
+    font-family: Roboto;
+    background-image:url('/Content/images/pink-star.png');background-repeat:no-repeat;background-position:13px 14px;
+    text-align: left;
+    padding-left: 50px;
 }
 
 #main-carousel .carousel-inner .item {
@@ -357,12 +383,14 @@ h1, h2, h3, h4, h5, h6 {
 #main-carousel .carousel-inner h2 {
 	color: #f6f6f6;
 	display: inline-block;
-	font-family: roboto;
+	/*font-family: roboto;*/
 	font-size: 55px;
 	font-weight: 800;
 	margin-bottom: 40px;
     text-shadow: 3px 3px #000;
 	text-transform: uppercase;
+        font-family: Roboto;
+
 }
 
 #main-carousel .carousel-inner h2 span{
@@ -449,7 +477,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 #about-us {
-	background:#F6F6F6;
+	/*background:#F6F6F6;*/
 	overflow: hidden;
 	padding: 85px 0;
 }
@@ -459,6 +487,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .title-one {
+    font-family: 'Fanwood Text', sans-serif;
+
 	color: #FF2A7F;
 	display: inline-block;
 	font-size: 32px;
@@ -501,7 +531,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #about-us p {
 	font-weight:300;
-	font-size:15px
+	font-size: 16px
 }
 
 .about-us .col-sm-6 {
@@ -525,11 +555,8 @@ h1, h2, h3, h4, h5, h6 {
 ======================*/
 
 #contact {
-	overflow:hidden;
-	background-color: #f6f6f6;
-	position:relative;
-	padding-bottom:85px;
-	border-top:2px solid #ddd
+	overflow: hidden;
+	padding: 85px 0;
 }
 
 #contact .contact-heading {
@@ -542,7 +569,7 @@ h1, h2, h3, h4, h5, h6 {
 	padding-top:75px;
 }
 
-.pattern {
+/*.pattern {
 	height:100%;
 	position:absolute;
 	width:100%;
@@ -552,7 +579,7 @@ h1, h2, h3, h4, h5, h6 {
 	background-image:url(/Content/images/pattern.png);
 	background-repeat:repeat;
 	opacity:0.2;
-}
+}*/
 
 
 .contact-address {
@@ -689,6 +716,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
  bottom:0;
  left:0;
+ z-index: 5000;
 }
 
 #footer p {
