--- a/source/RockawayWish.Web/Views/Home/Donate.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Donate.cshtml
@@ -6,7 +6,7 @@
                 <h2 class="title-one">Donate</h2>
                 <p>Please donate to the WISH of Rockaway!</p>
                 <br />
-                <p><a class="btn btn-default slider-btn animated fadeIn" style="text-shadow: 2px 2px #000;" href="@Url.Content("~/donate")">Donate</a></p>
+                <p><a class="btn slider-btn animated fadeIn" href="@Url.Content("~/donate")">Donate</a></p>
                 @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>*@
             </div>
         </div>
