--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link href="@Url.Content("~/Content/css/responsive-carousel.css")" rel="stylesheet">
    <!--[if lt IE 9]> <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script> <![endif]-->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Fanwood+Text" />
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="@Url.Content("~/Content/images/ico/apple-touch-icon-144-precomposed.png")">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="@Url.Content("~/Content/images/ico/apple-touch-icon-114-precomposed.png")">
@@ -56,7 +57,7 @@
 
                         @if (!Request.IsAuthenticated)
                         { 
-                            <li><a href="@Url.Content("~/register")">Join WISH!</a></li>
+                            <li><a href="@Url.Content("~/register")">Join</a></li>
                             <li><a href="@Url.Content("~/signin")">Sign In</a></li>
                         }
                         else
