--- a/source/RockawayWish.Web/Content/css/site.css
+++ b/source/RockawayWish.Web/Content/css/site.css
@@ -84,7 +84,7 @@ p { font-size: 16px; }
 	-webkit-box-shadow: inset 0 0 0 2px #fc7700;
 	box-shadow: inset 0 0 0 2px #000;
 	text-transform: uppercase;
-	/*width: 190px;*/
+	width: 190px;
 	text-align: center;
 	height: 55px;
 	line-height:55px;
