--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -77,11 +77,10 @@
     @Html.Partial("_Footer")
 
     <script type="text/javascript" src="@Url.Content("~/js/jquery.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/js/jquery.validate.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/js/jquery.validate.unobtrusive.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/js/bootstrap.min.js")"></script>
-    @*<script type="text/javascript" src="@Url.Content("~/js/smoothscroll.js" )"></script>*@
     <script type="text/javascript" src="@Url.Content("~/js/jquery.isotope.min.js" )"></script>
-    @*<script type="text/javascript" src="@Url.Content("~/js/jquery.prettyPhoto.js" )"></script>*@
-    @*<script type="text/javascript" src="@Url.Content("~/js/jquery.parallax.js" )"></script>*@
     <script type="text/javascript" src="@Url.Content("~/js/main.js")"></script>
 
     @*@Scripts.Render("~/bundles/jquery")
