--- a/source/RockawayWish.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/source/RockawayWish.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -6,9 +6,16 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Forgot your password?</h2>
-                <p>
-                    Please check your email to reset your password.
-                </p>
+                @if (!Request.IsAuthenticated)
+                {
+                    <p>
+                        Please check your email to reset your password.
+                    </p>
+                }
+                else
+                {
+                    <h3>There is a user already signed in.</h3>
+                }
             </div>
         </div>
     </div>
