--- a/source/RockawayWish.Web/Views/Account/RegisterConfirmation.cshtml
+++ b/source/RockawayWish.Web/Views/Account/RegisterConfirmation.cshtml
@@ -3,10 +3,15 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Join WISH of Rockway!</h2>
+                @if (!Request.IsAuthenticated)
+                {
                 <p>Thank you for your submission!</p>
 <p>  You will be hearing from us very shortly.  Be sure to check your email.</p>
-    
-
+                }
+                else
+                {
+                    <h3>There is a user already signed in.</h3>
+                }
             </div>
         </div>
     </div>
