--- a/source/RockawayWish.Web/Content/css/site.css
+++ b/source/RockawayWish.Web/Content/css/site.css
@@ -535,7 +535,7 @@ p { font-size: 16px; }
 }
 
 .about-us .col-sm-6 {
-	margin-top:50px
+	/*margin-top:50px*/
 }
 
 .about-us h3 {
@@ -585,7 +585,7 @@ p { font-size: 16px; }
 .contact-address {
 	background-color: #fff;
 	height:390px;
-	padding-top:85px
+	
 }
 
 .contact-address .social-icons a i {
@@ -641,9 +641,9 @@ p { font-size: 16px; }
 }
 
 #contact-form-section {	
-	padding:35px;
+	
 	background-color: #FFF; 
-	height:390px;
+	
 }
 #contact-form-section .btn-primary {
 	background-color:#fc7700;
