--- a/source/RockawayWish.Web/Views/Account/ForgotPassword.cshtml
+++ b/source/RockawayWish.Web/Views/Account/ForgotPassword.cshtml
@@ -8,23 +8,30 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Forgot your password?</h2>
-                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                @if (!Request.IsAuthenticated)
                 {
-                @Html.AntiForgeryToken()
-                <h4>Enter your email.</h4>
-                <hr />
-                @Html.ValidationSummary("", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                    @Html.AntiForgeryToken()
+                    <h4>Enter your email.</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-default" value="Email Link" />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" class="btn btn-default" value="Email Link" />
+                        </div>
                     </div>
-                </div>
+                    }
+                }
+                else
+                {
+                    <h3>There is a user already signed in.</h3>
                 }
 
             </div>
