--- a/source/RockawayWish.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/source/RockawayWish.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Reset your password</h2>
                 <p>Thank you for your submission!</p>
-                <p>You make try signing in with your new password</p>
+                <p>You may try signing in with your new password.</p>
             </div>
         </div>
     </div>
