--- a/source/RockawayWish.Web/Views/Members/Payment.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Payment.cshtml
@@ -14,6 +14,7 @@
                     string pairKey;
                     string duesTitle;
                     string duesId;
+                    string duesPayPalButtonId = string.Empty;
 
                     List<UserPaymentsModel> lsUserPayments = new List<UserPaymentsModel>(); ;
                     char[] delimitter = { '|' };
@@ -26,6 +27,8 @@
                                 string[] strArr = pairKey.Split(delimitter);
                                 duesTitle = strArr[0];
                                 duesId = strArr[1];
+                                try { duesPayPalButtonId = strArr[2]; }
+                                catch { }
 
 
                                 if (lsUserPayments != null && lsUserPayments.Count() > 0)
@@ -47,7 +50,13 @@
                                 {
                                     <div style="margin-top: 50px;"><h2>@duesTitle</h2></div>
                                     <div style="margin-top: 50px;">
-                                        @Html.Partial("_PayPalSubsribeButton")
+                                        @*@Html.Partial("_PayPalSubsribeButton")*@
+                                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                            <input type="hidden" name="cmd" value="_s-xclick">
+                                            <input type="hidden" name="hosted_button_id" value="@duesPayPalButtonId">
+                                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                                        </form>
                                     </div>
                                 }
                             }
