--- a/source/RockawayWish.Web/Views/Account/ResetPassword.cshtml
+++ b/source/RockawayWish.Web/Views/Account/ResetPassword.cshtml
@@ -11,46 +11,56 @@
                     <h2 class="title-one">Reset your password?</h2>
 
 
-                @if (!Request.IsAuthenticated)
+                @if (Model != null && Model.Status == 0)
                 {
-                    using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        <h4>Reset your password.</h4>
-                        <hr />
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
-                            @Html.HiddenFor(model => model.Code)
-                            @Html.HiddenFor(model => model.UserId)
-                            @Html.HiddenFor(model => model.ApplicationId)
-                            @*<div class="form-group">
-                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                </div>
-                            </div>*@
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
-                                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" class="btn btn-default" value="Reset" />
-                                </div>
-                            </div>
-                            @Html.AntiForgeryToken()
 
+                    if (!Request.IsAuthenticated)
+                    {
+                        using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            <h4>Reset your password.</h4>
+                            <hr />
+                                @Html.ValidationSummary("", new { @class = "text-danger" })
+                                @Html.HiddenFor(model => model.Code)
+                                @Html.HiddenFor(model => model.UserId)
+                                @Html.HiddenFor(model => model.ApplicationId)
+                                @*<div class="form-group">
+                                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                                    <div class="col-md-10">
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                    </div>
+                                </div>*@
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                                    <div class="col-md-10">
+                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                                    <div class="col-md-10">
+                                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" class="btn btn-default" value="Reset" />
+                                    </div>
+                                </div>
+                                @Html.AntiForgeryToken()
+
+                        }
+                    }
+                    else
+                    {
+                    <h3>There is a user already signed in.</h3>
                     }
                 }
                 else
                 {
-                <h3>There is a user already signed in.</h3>
+                    <h3>It looks like you already reset your password.</h3>
+                    <h4>If you forgot your password, please click <a href="@Url.Content("~/forgotpassword")">here</a>.</h4>
+                    
                 }
             </div>
         </div>
