--- a/source/RockawayWish.Web/Views/Home/Contact.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Contact.cshtml
@@ -36,7 +36,10 @@
                     <div class="col-sm-6">
                         <div id="contact-form-section">
                             <div class="status alert alert-success" style="display: none"></div>
-                            <form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">
+                            @using (Html.BeginForm("Contact", "Home", FormMethod.Post, new { @class = "contact", role = "form" }))
+                            {
+                                @Html.AntiForgeryToken()
+                            @*<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">*@
                                 <div class="form-group">
                                     <input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">
                                 </div>
@@ -49,7 +52,8 @@
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-primary">Send</button>
                                 </div>
-                            </form>
+                            @*</form>*@
+                            }
                         </div>
                     </div>
                 </div>
