--- a/source/RockawayWish.Web/Views/Home/Donate.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Donate.cshtml
@@ -4,7 +4,7 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Donate</h2>
-                <p>Please donate to the WISH of Rockaway!</p>
+                <h4>Please donate to the WISH of Rockaway!</h4>
                 <br />
                 <p><a class="btn slider-btn animated fadeIn" href="@Url.Content("~/donate")">Donate</a></p>
                 @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>*@
