--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -24,9 +24,11 @@
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInDown">Women</h2><br />
-                        <p class="animated bounceInUp">Would you like to run the 2016 NYC marathon?</p>
-                        <p class="animated bounceInDown">Come on ladies!</p>
-                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/contact-wish")">Contact Us</a>
+                        <p class="animated bounceInUp">This year we are honoring<br />
+                        Kathy Clarke, Kathleen Beissel, and Helen Hanning<br /> 
+                        at our annual Ladies Brunch on November 5th.</p>
+                        <p class="animated bounceInDown">Here's a sneak peek at the raffle prizes.</p>
+                        <a class="btn btn-default slider-btn animated fadeIn" href="@Url.Content("~/Content/pdf/wish-raffles-2016.pdf")" target="_blank">Raffle Info</a>
                     </div>
                 </div>
 
@@ -34,15 +36,18 @@
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide3.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight">Inspired</h2>
-                    </div>
+                        <h2 class="heading animated bounceInDown">Inspired</h2><br />
+                        <p class="animated bounceInUp">Our 2016 Scholarship winner<br />
+                                Annie Burns and her mom.
+                            </p>
+</div>
                 </div>
             </div>
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide4.jpg")')">
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInRight">Support</h2><br />
-                        <p class="animated bounceInUp">Would you like to donate?</p>
+                        <p class="animated bounceInUp">WISH of Rockaway can use your support.</p>
                         <a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/donate")">Donate</a>
                     </div>
                 </div>
@@ -50,7 +55,9 @@
             <div class="item responsive-image" style="background-image: url('@Url.Content("~/Content/images/slider/slide5.jpg")')">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInRight">Help</h2>
+                        <h2 class="heading animated bounceInRight">Help</h2><br />
+                        <p class="animated bounceInUp">We are always looking more new members.</p>
+                        <p><a class="btn btn-default slider-btn animated bounceInUp" href="@Url.Content("~/register")">JOIN WISH</a></p>
                     </div>
                 </div>
             </div>
