--- a/source/RockawayWish.Web/Views/Account/Login.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
-                    <h4>Sign in to enjoy all the member benefits we provide.</h4>
+                    <h4>Sign in to keep up to date on your membership status and upcoming WISH events.</h4>
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
