--- a/source/RockawayWish.Web/Views/Account/Register.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
-                <h2 class="title-one">Join WISH of Rockway!</h2>
+                <h2 class="title-one">Join WISH of Rockaway!</h2>
                 @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>*@
 
                 @if (!Request.IsAuthenticated)
@@ -16,7 +16,8 @@
                     using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
                         @Html.AntiForgeryToken()
-                        <h4>Create a new account.</h4>
+                        <h4>We are always looking for motivated women looking to support and help in the Rockaway community.</h4>
+                        <p> If you would like to join WISH of Rockaway, please fill out the form below, we would love to have you!</p>
                         <hr />
                     
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -112,17 +113,11 @@
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.YearJoined, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.YearJoined, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.YearJoined, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <input type="submit" class="btn btn-default" value="Register" />
                             </div>
                         </div>
+                        @Html.HiddenFor(model => model.YearJoined)
                     }
                 }
                 else
