--- a/source/RockawayWish.Web/Views/Home/Contact.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Contact.cshtml
@@ -13,7 +13,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="contact-heading">
                     <h2 class="title-one">Contact Us</h2>
-                    @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>*@
+                    <h4>If you have any questions, comments, or suggestions for Wish of Rockaway <br />please send us a message and we will get back to you shortly.</h4>
                 </div>
             </div>
         </div>
