--- a/source/RockawayWish.Web/Views/Home/Donate.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Donate.cshtml
@@ -6,7 +6,7 @@
                 <h2 class="title-one">Donate</h2>
                 <h4>Please donate to the WISH of Rockaway!</h4>
                 <br />
-                <p><a class="btn slider-btn animated fadeIn" href="@Url.Content("~/donate")">Donate</a></p>
+                <p><a class="btn slider-btn animated fadeIn" href="@Url.Content("~/members/donate")">Donate</a></p>
                 @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>*@
             </div>
         </div>
