--- a/source/RockawayWish.Web/Views/Contact/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Contact/Index.cshtml
@@ -1,13 +1,6 @@
-﻿<section id="contact">
-    @*<div class="container">
-        <div class="row text-center clearfix">
-            <div class="col-sm-8 col-sm-offset-2">
-                <div class="contact-heading">
-                    <h2 class="title-one">Contact Us</h2>
-                </div>
-            </div>
-        </div>
-    </div>*@
+﻿@model RockawayWish.Web.Models.ContactViewModel
+
+<section id="contact">
     <div class="container">
         <div class="row text-center clearfix">
             <div class="col-sm-8 col-sm-offset-2">
@@ -27,32 +20,41 @@
                             <div class="social-icons">
                                 <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank"><i class="fa fa-facebook"></i></a>
                                 <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
-                                @*<a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>*@
+                                <a href="#"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div id="contact-form-section">
                             <div class="status alert alert-success" style="display: none"></div>
-                            @using (Html.BeginForm("Contact", "Home", FormMethod.Post, new { @class = "contact", role = "form" }))
+                            @using (Html.BeginForm(new { @class = "contact", role = "form" }))
                             {
                                 @Html.AntiForgeryToken()
-                            @*<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">*@
+                                
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                                @*<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">*@
                                 <div class="form-group">
-                                    <input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">
+                                    @*<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">*@
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control name-field", @required = "required", @placeholder = "Your Name" })
+                                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">
+                                    @*<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">*@
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control mail-field", @required = "required", @placeholder = "Your Email" })
+                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
-                                    <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>
+                                    @*<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>*@
+                                    @Html.TextAreaFor(m => m.Message, new { @class = "form-control", @required = "required", @rows = "8", @placeholder = "Message" })
+                                    @Html.ValidationMessageFor(m => m.Message, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-primary">Send</button>
                                 </div>
-                            @*</form>*@
+                                @*</form>*@
                             }
                         </div>
                     </div>
@@ -60,4 +62,4 @@
             </div>
         </div>
     </div>
-    </section>
+</section>
