Contact us updates

--- a/source/RockawayWish.Web/Views/Contact/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Contact/Index.cshtml
@@ -20,9 +20,9 @@
                             <div class="social-icons">
                                 <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank"><i class="fa fa-facebook"></i></a>
                                 <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                @*<a href="#"><i class="fa fa-google-plus"></i></a>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
+                                <a href="#"><i class="fa fa-linkedin"></i></a>*@
                             </div>
                         </div>
                     </div>
