--- a/source/RockawayWish.Web/Views/Account/Register.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Register.cshtml
@@ -9,7 +9,6 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Join WISH of Rockaway!</h2>
-                @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>*@
 
                 @if (!Request.IsAuthenticated)
                 {
@@ -24,7 +23,7 @@
                             @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
                             <div class="col-md-10">
                                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
-                                @*@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })*@
+                                @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="form-group">
