--- a/source/RockawayWish.Web/Views/Account/ForgotPassword.cshtml
+++ b/source/RockawayWish.Web/Views/Account/ForgotPassword.cshtml
@@ -13,7 +13,7 @@
                     using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
                     @Html.AntiForgeryToken()
-                    <h4>Enter your email.</h4>
+                    <h4>Forgot your password?  No problem!</h4>
                     <hr />
                     @Html.ValidationSummary("", new { @class = "text-danger" })
                     <div class="form-group">
@@ -24,7 +24,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" class="btn btn-default" value="Email Link" />
+                            <input type="submit" class="btn btn-default" value="Retrieve Password" />
                         </div>
                     </div>
                     }
