--- a/source/RockawayWish.Web/Views/Account/Login.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Login.cshtml
@@ -42,8 +42,7 @@
                             <input type="submit" value="Log in" class="btn btn-default" />
                             <br style="margin-bottom: 40px;" />
                             @*<a href="@Url.Content("~/account/register")" class="btn btn-default">Register</a>*@
-                            <a href="@Url.Content("~/forgotpassword")" class="btn btn-default">Forget your password?</a>
-                            &nbsp;&nbsp;&nbsp;<a href="@Url.Content("~/register")" class="btn btn-default">Join WISH!</a>
+                            <p>Forgot your password? <a href="@Url.Content("~/forgotpassword")">Click here</a>.</p>
                         </div>
                     </div>
                 }
