--- a/source/RockawayWish.Web/Views/Donate/Payment.cshtml
+++ b/source/RockawayWish.Web/Views/Donate/Payment.cshtml
@@ -5,7 +5,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Donate</h2>
 
-                <p>Click on the subscribe button below to make a payment.</p>
+                <p>Click on the donate button below to make a payment.</p>
                 <p>A PayPal account is required.</p>
                 <div style="margin-top: 50px;">
                     @*@Html.Partial("_PayPalSubsribeButton")*@
