--- a/source/RockawayWish.Web/Views/Members/CancelPayment.cshtml
+++ b/source/RockawayWish.Web/Views/Members/CancelPayment.cshtml
@@ -8,10 +8,9 @@
                 <br />
                 <br />
                 <p>
-                    <a href="@Url.Content("~/members/info")">Profile Information</a>
-                </p>
-                <p>
-                    <a href="@Url.Content("~/members/payments")">Dues and payments</a>
+                    <a href="@Url.Content("~/members/info")" class="btn btn-default" style="margin-right: 20px;">View Profile Information</a>
+
+                    <a href="@Url.Content("~/members/payments")" class="btn btn-default">Dues and payments</a>
                 </p>
             </div>
         </div>
