--- a/source/RockawayWish.Web/Views/Members/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Index.cshtml
@@ -4,13 +4,12 @@
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title-one">Member Center</h2>
-                <p> We welcome you to the WISH of Rockaway group with much love. I hope you would work for the motive of the group as much as other members and save our coummunity.</p>
+                <p> We welcome you to WISH of Rockaway group with much love. We are excited to have you as a member and we look forward to learning about how you would like to be involved with WISH.</p>
                 <br />
                 <p>
-                    <a href="@Url.Content("~/members/info")">Profile Information</a>
-                </p>
-                <p>
-                    <a href="@Url.Content("~/members/payments")">Dues and payments</a>
+                    <a href="@Url.Content("~/members/info")" class="btn btn-default" style="margin-right: 20px;">View Profile Information</a>
+
+                    <a href="@Url.Content("~/members/payments")" class="btn btn-default">Dues and payments</a>
                 </p>
             </div>
         </div>
